# cmake-proj-template

./: .gitignore  CMakeLists.txt  init.sh
cmake/: projectnameConfig.cmake.in
include/projectname/: foo.h  projectname_global.h
src/: foo.cpp  projectname.cpp  projectname.h  projectname.qrc
src/projectname/views/: MainLinux.qml  MainMac.qml  MainWin.qml  exampleContent.qml
